# codex-tasks

./: .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/: branch-protection.json
.github/workflows/: ci.yml
docs/: branch-protection.md  plan.md  prd-containerized-workers.md  prd.md  proto.md
docs/01-mvp/: prd.md
docs/02-containers/: prd-containerized-workers.md
docs/features/exec-migration/: plan.md  prd.md
docs/features/mcp-server/: plan.md  prd.md
src/: cli.rs  event_processor_with_human_output.rs  main.rs  mcp.rs  status.rs  storage.rs  task.rs  timefmt.rs
src/commands/: archive.rs  common.rs  log.rs  ls.rs  mod.rs  send.rs  start.rs  status.rs  stop.rs  tasks.rs  worker.rs
src/services/: tasks.rs
src/tasks/: mod.rs  service.rs  status.rs  store.rs
src/worker/: child.rs  event_processor.rs  event_processor_with_human_output.rs  launcher.rs  mod.rs  runner.rs
tests/: cli.rs  codex_task.rs  util.rs  worker.rs
