[package]
name = "codex-task"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4.40"
codex-common = { path = "third_party/codex/codex-rs/common", features = ["elapsed"] }
codex-core = { path = "third_party/codex/codex-rs/core" }
codex-protocol = { path = "third_party/codex/codex-rs/protocol" }
owo-colors = "4.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3.0"
tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }
