[package]
name = "codex-tasks"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
codex-common = { path = "third_party/codex/codex-rs/common", features = ["elapsed"] }
codex-core = { path = "third_party/codex/codex-rs/core" }
codex-protocol = { path = "third_party/codex/codex-rs/protocol" }
dirs = "5.0.1"
owo-colors = "4.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3.0"
toml = "0.8"
tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
mcp-types = { path = "third_party/codex/codex-rs/mcp-types" }
tempfile = "3"
tabwriter = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
